Cleanup and switching all code to one project.

--- a/CSharpConsole/CSharpConsole.csproj
+++ b/CSharpConsole/CSharpConsole.csproj
@@ -6,9 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Reference Include="VBClassLib">
-      <HintPath>..\VBClassLib\bin\Debug\netstandard2.0\VBClassLib.dll</HintPath>
-    </Reference>
+    <ProjectReference Include="..\VBClassLib\VBClassLib.vbproj" />
   </ItemGroup>
 
 </Project>
