--- a/CSharpConsole/CSharpConsole.csproj
+++ b/CSharpConsole/CSharpConsole.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\VBClassLib\VBClassLib.vbproj" />
+    <ProjectReference Include="..\FSharpClassLib\FSharpClassLib.fsproj" />
   </ItemGroup>
 
 </Project>
