--- a/VBConsoleApp/VBConsoleApp.vbproj
+++ b/VBConsoleApp/VBConsoleApp.vbproj
@@ -6,12 +6,16 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <DefineDebug>false</DefineDebug>
+  </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CSharpClassLib\CSharpClassLib.csproj" />
+    <ProjectReference Include="..\FSharpClassLib\FSharpClassLib.fsproj" />
   </ItemGroup>
 
 </Project>
