--- a/FSharpConsoleApp/FSharpConsoleApp.fsproj
+++ b/FSharpConsoleApp/FSharpConsoleApp.fsproj
@@ -9,4 +9,11 @@
     <Compile Include="Program.fs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CSharpClassLib\CSharpClassLib.csproj" />
+    <ProjectReference Include="..\VBClassLib\VBClassLib.vbproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
 </Project>
