--- a/VBClassLib/VBClassLib.vbproj
+++ b/VBClassLib/VBClassLib.vbproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <RootNamespace>VBClassLib</RootNamespace>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
 
 </Project>
